--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 li{
-    border: solid red 2px;
+    
     width: 100px;
-  
+    height: 50px;
+    margin-top: 0;
 }
 img{
     border: solid red 2px;
 }
 nav{
     display: flex;
-    background-color: aquamarine;
+    background-color: rgb(245, 252, 252);
     justify-content: space-between;
     height: 70px;
 }
@@ -19,16 +20,17 @@ ul{
 a{
     text-decoration: none;
     color: black;
+    
 }
 body{
-    background-color: aqua;
+    background-color: rgb(248, 249, 249);
 }
 #contenedor_principal{
     padding: 3rem;
     display: flex;
     align-items: center;
     height: 200px;
-    background-color: blue;
+    background-color: aquamarine;
 }
 .reverse{
     flex-direction: row-reverse;
