--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ nav img{
     padding: 0 35px;
     display: flex;
     align-items: center;
-    background-color: aquamarine;
+    background-color: rgb(252, 252, 252);
 }
 .reverse{
     flex-direction: row-reverse;
@@ -52,6 +52,7 @@ nav img{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    
 }
 .contenedor_imagen img{
     width: 300px;
@@ -104,7 +105,91 @@ section#foto_fondo{
 }
 
 /* LINEA DE TIEMPO NO TOCAR */
-.timeline {
+
+button {
+    background-color: #47a386;
+    border-radius: 6px;
+    border: none;
+    box-shadow: 0 2px 4px #0e0e0e;
+    color: #ffffff;
+    font-size: 1em;
+    padding: 10px 25px;
+    cursor: pointer;
+  }
+  
+  .destinos {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  
+  .emergente__conteiner {
+    display: flex;
+    background-color: #95959535;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    visibility: hidden;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: 20;
+  }
+  
+  .titulo1,
+  .texto1,
+  .titulo2,
+  .texto2,
+  .titulo3,
+  .texto3 {
+    display: none;
+  }
+  
+  .mostrarTexto {
+    display: block;
+  }
+  
+  .mostrar {
+    visibility: visible;
+  }
+  
+  .ventana__emergente {
+    background-color: #ffffff;
+    width: 600px;
+    max-width: 100%;
+    padding: 30px 50px;
+    border-radius: 6px;
+    box-shadow: 0 2px 4px #0e0e0e;
+    text-align: center;
+  }
+  
+  .ventana__emergente h2 {
+    padding: 1rem;
+    font-weight: 600;
+  }
+  
+  .ventana__emergente p {
+    padding-bottom: 1.5rem;
+    opacity: 0.8;
+    font-size: 1.2em;
+  }
+  .btn_cerrar {
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    background-color: #47a386;
+    border-radius: 6px;
+    border: none;
+    box-shadow: 0 2px 4px #0e0e0e;
+    color: #ffffff;
+    font-size: 1em;
+    padding: 10px 25px;
+    cursor: pointer;
+  }
+/* .timeline {
     display: flex;
     justify-content: space-between;
     padding: 20px;
@@ -142,7 +227,7 @@ section#foto_fondo{
     top: 10px;
     right: 10px;
     cursor: pointer;
-  }
+  } */
 
   
   .tarjetas{
@@ -150,3 +235,30 @@ section#foto_fondo{
     justify-content: space-around;
     z-index: -20px;
   }
+.event{
+    background-color: rgb(107, 234, 179);
+}
+.hr{
+    border-radius: 10px;
+}
+footer{
+    background-color:   rgb(0, 0, 0);
+    display: flex;
+    justify-content: space-around;
+    margin: 0;
+}
+.h5{
+    color: white;
+}
+.footerTitulo{
+    color: white;
+}
+
+.fab{
+    font-size: 48px;
+}
+
+footer a{
+  text-decoration: none;
+  color: white;
+}
